--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "vite": "^4.3.9"
     
   },
   "devDependencies": {
