--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+   "engines" : {
+    "npm" : ">=9.7.2",
+    "node" : ">=20.4.0"
+  },
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon",
