--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server/server.js",
    "engines" : {
-    "npm" : ">=9.7.2",
-    "node" : ">=20.4.0"
+    "node" : "20.4.0"
   },
   "scripts": {
     "start": "node server --ignore client",
