--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.0",
   "type": "module",
    "engines" : {
-    "npm" : ">=9.7.2",
-    "node" : ">=20.4.0"
+    "node" : "20.4.0"
   },
 
   "scripts": {
