--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "seed": "cd server && npm run seed",
     "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
     "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;",
-    "heroku-prebuild": "cd client && npm i vite@4.3.2",
+    "install-bash-vite": "cd client && npm i vite@4.3.2",
     "build": "cd client && npm run build"
   },
   "keywords": [],
